2019-11-07 Wiley E. Hill <wileyhill@gmail.com

    * src/x/x_dialog.c: Remove unused second argument from create_geda_switch.

    * src/x/x_edit_pin.c: Update create_geda_switch arguments.

2019-11-02 Wiley E. Hill <wileyhill@gmail.com

    * po/el.po: Update Greek translations.
    * po/en_GB.po: Update Great Britain.
    * po/es.po: Update Spanish translations.
    * po/fi.po: Update Finnish translations.
    * po/fr.po: Update French translations.
    * po/hu.po: Update Hungarian translations.
    * po/it.po: Update Italian translations.
    * po/ja.po: Update Japanese translations.
    * po/kh.po: Update Khmer translations.

2019-10-26 Wiley E. Hill <wileyhill@gmail.com

    * po/af.po: Update Afrikaans translations.
    * po/ar.po: Update Arabic translations.
    * po/de.po: Update German translations.

2019-10-25 Wiley E. Hill <wileyhill@gmail.com

    * src/object/o_undo.c: Revise conditionals in o_undo_savestate; nest
      if (w_current->undo_type == UNDO_DISK && flag == UNDO_ALL) with if
      (flag == UNDO_ALL) to eliminate the redundant flag == UNDO_ALL, and
      utilize geda_toplevel_get_net_consolidate instead of accessing
      net_consolidate member directly.

2019-10-19 Wiley E. Hill <wileyhill@gmail.com

    * po/bs.po: Update Bosnian translations.
    * po/fi.po: Update Finnish translations.
    * po/fr.po: Update French translations.
    * po/he.po: Update Hebrew translations.
    * po/sl.po: Update Slovenian translations.
    * po/sr.po: Update Serbian translations.
    * po/tr.po: Update Turkish translations.
    * po/zh_CN.po: Update Chinese simplified translations.
    * po/zh_TW.po: Update Chinese traditional translations.

2019-10-16 Wiley E. Hill <wileyhill@gmail.com

    * src/x/x_image.c: Translate the dialog error text in x_image_get_pixbuf,
      and update the function documentation.

2019-10-12 Wiley E. Hill <wileyhill@gmail.com

    * po/af.po: Update Afrikaans translations.
    * po/ar.po: Update Arabic translations.